e2etests/kube_tests/integration/common/network_policy_yamls/allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: {}
